--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -30,7 +30,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
-                <h4 class="heading-4">World's best luxury homes</h4>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
                 <p class="feature_text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.
                 </p>
@@ -40,7 +40,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
-                <h4 class="heading-4">Only The Best Properties</h4>
+                <h4 class="heading-4 heading-4--dark">Only The Best Properties</h4>
                 <p class="feature_text">
                     Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.
                 </p>
@@ -50,7 +50,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
-                <h4 class="heading-4">All homes in top locations</h4>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
                 <p class="feature_text">
                     Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.
                 </div>
@@ -59,7 +59,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
-                <h4 class="heading-4">New home in one week</h4>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
                 <p class="feature_text">
                     Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
@@ -69,7 +69,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
-                <h4 class="heading-4">Top 1 % Realtors</h4>
+                <h4 class="heading-4 heading-4--dark">Top 1 % Realtors</h4>
                 <p class="feature_text">
                     Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.
                 </p>
@@ -79,7 +79,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-lock"></use>
                 </svg>
-                <h4 class="heading-4">Secure payments on nexter</h4>
+                <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
                 <p class="feature_text">
                     Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
                 </p>
